@@ -79,6 +79,7 @@
         <term><varname>CrashChangeVT=no</varname></term>
         <term><varname>CrashShell=no</varname></term>
         <term><varname>CrashReboot=no</varname></term>
+        <term><varname>CrashAction=freeze</varname></term>
         <term><varname>ShowStatus=yes</varname></term>
         <term><varname>DefaultStandardOutput=journal</varname></term>
         <term><varname>DefaultStandardError=inherit</varname></term>
